// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Chip Chip Sizes 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    css={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        css={[Function]}
        data-testid="chip"
      >
        <div>
          Medium Size
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        css={[Function]}
        data-testid="chip"
      >
        <div>
          Small Size
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Chip Chip Styles 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    css={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        css={[Function]}
        data-testid="chip"
      >
        <div>
          Filled Style
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        css={[Function]}
        data-testid="chip"
      >
        <div>
          Outlined Style
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Chip Chip with Icons 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    css={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          css={
            Object {
              "marginBottom": "20px",
            }
          }
        >
          <div
            css={[Function]}
            data-testid="chip"
          >
            <div
              css={
                Object {
                  "map": undefined,
                  "name": "e947bd",
                  "next": undefined,
                  "styles": "
  
  
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: flex;
;;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  align-items: center;
;;
  height: 1rem;
  width: 1rem;
  & > * {
    max-height: 100%;
  }

  cursor: auto;
  padding-left: 0.25rem;
  padding-right: 0.25rem;
",
                  "toString": [Function],
                }
              }
            >
              <img
                src="https://brandmark.io/logo-rank/random/pepsi.png"
              />
            </div>
            <div>
              <div>
                Label Text
              </div>
            </div>
          </div>
        </div>
        <div
          css={
            Object {
              "marginBottom": "20px",
            }
          }
        >
          <div
            css={[Function]}
            data-testid="chip"
          >
            <div>
              <div>
                Label Text
              </div>
            </div>
            <div
              css={
                Object {
                  "map": undefined,
                  "name": "e947bd",
                  "next": undefined,
                  "styles": "
  
  
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: flex;
;;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  align-items: center;
;;
  height: 1rem;
  width: 1rem;
  & > * {
    max-height: 100%;
  }

  cursor: auto;
  padding-left: 0.25rem;
  padding-right: 0.25rem;
",
                  "toString": [Function],
                }
              }
            >
              <img
                src="https://brandmark.io/logo-rank/random/pepsi.png"
              />
            </div>
          </div>
        </div>
        <div
          css={
            Object {
              "marginBottom": "20px",
            }
          }
        >
          <div
            css={[Function]}
            data-testid="chip"
          >
            <div
              css={
                Object {
                  "map": undefined,
                  "name": "dyb6w8",
                  "next": undefined,
                  "styles": "
  
  
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: flex;
;;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  align-items: center;
;;
  height: 1rem;
  width: 1rem;
  & > * {
    max-height: 100%;
  }

  cursor: pointer;
  padding-left: 0.25rem;
  padding-right: 0.25rem;
",
                  "toString": [Function],
                }
              }
              onClick={[Function]}
            >
              <img
                src="https://brandmark.io/logo-rank/random/pepsi.png"
              />
            </div>
            <div>
              <div>
                Label Text
              </div>
            </div>
            <div
              css={
                Object {
                  "map": undefined,
                  "name": "dyb6w8",
                  "next": undefined,
                  "styles": "
  
  
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: flex;
;;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  align-items: center;
;;
  height: 1rem;
  width: 1rem;
  & > * {
    max-height: 100%;
  }

  cursor: pointer;
  padding-left: 0.25rem;
  padding-right: 0.25rem;
",
                  "toString": [Function],
                }
              }
              onClick={[Function]}
            >
              <img
                src="https://brandmark.io/logo-rank/random/pepsi.png"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Chip Dynamic Chip Props 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    css={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        css={[Function]}
        data-testid="chip"
      >
        <div>
          <div>
            change me!
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
